<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".fragments.RMP.FragmentRMPLab2">
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/rmp_lab2_Message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_message"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelTextColor="@color/colorAccent"/>

    <Button
        android:id="@+id/rmp_lab2_Send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:backgroundTint="@color/colorAccentLight"
        android:fontFamily="serif-monospace"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/colorDefault"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/rmp_lab2_Photo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/ic_menu_camera"
        android:padding="100dp"
        android:background="@color/colorDefault"
        />

    <Button
        android:id="@+id/rmp_lab2_CreatePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorAccentLight"
        android:fontFamily="serif-monospace"
        android:text="@string/Create_photo"
        android:textAllCaps="false"
        android:textColor="@color/colorDefault"
        android:textSize="14sp" />

</LinearLayout>