<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/prp_lab5_2_LayoutContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/prp_lab5_2_TextInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorRed"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/UploadTextAndWaitResult"
            android:textColor="@color/colorBlack" />

        <Button
            android:id="@+id/prp_lab5_2_SendText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccentLight"
            android:text="@string/Upload_text"
            android:textAllCaps="false"
            android:textColor="@color/colorDefault" />

        <ProgressBar
            android:id="@+id/prp_lab5_2_FastPB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:gravity="start"
                android:text="@string/Word"
                android:textColor="@color/colorBlack" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="Встретилось в тексте:"
                android:textColor="@color/colorBlack" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryLite"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/prp_lab5_2_layoutRes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/prp_lab5_2_ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlackout"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/FileUploaded"
            android:textColor="@color/colorDefault" />

        <TextView
            android:id="@+id/prp_lab5_2_TextInfo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorDefault" />

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/prp_lab5_2_Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccentLight"
            android:text="@string/Cancel"
            android:textAllCaps="false"
            android:textColor="@color/colorDefault" />
    </LinearLayout>
</FrameLayout>