<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PRP.FragmentPRPLab3">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/prp_lab3_fabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add_white_24dp"
        app:fabSize="normal" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                style="@style/MyCardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/prp_lab3_CountProc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/CountProc" />

                    <SeekBar
                        android:id="@+id/prp_lab3_SeekBarProc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/prp_lab3_Radius"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Radius" />

                    <SeekBar
                        android:id="@+id/prp_lab3_SeekBarRadius"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:max="3" />

                    <ProgressBar
                        android:id="@+id/prp_lab3_progressBarHor"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:max="100" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/MyCardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ToggleButton
                        android:id="@+id/prp_lab3_ConnectServer"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textOff="@string/off"
                        android:textOn="@string/on"
                        android:backgroundTint="@color/colorAccent"
                        android:textColor="@color/colorDefault"/>

                    <TextView
                        android:id="@+id/prp_lab3_ConnectionStatus"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_marginEnd="5dp"
                        android:layout_marginStart="5dp"
                        android:text="@string/not_connected"
                        android:textColor="@color/colorRed"/>
                    <TextView
                        android:id="@+id/prp_lab3_CountConnections"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Подключено к серверу: ?"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/MyCardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_margin="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/Before"
                        android:textSize="16sp"
                        tools:targetApi="o" />

                    <ImageView
                        android:id="@+id/prp_lab3_ImgView1"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:scaleType="fitCenter"
                        app:srcCompat="@android:drawable/ic_menu_report_image" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/After"
                        android:textSize="16sp"
                        tools:targetApi="o" />

                    <ImageView
                        android:id="@+id/prp_lab3_ImgView2"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:scaleType="fitCenter"
                        app:srcCompat="@android:drawable/ic_menu_report_image" />

                    <ProgressBar
                        android:id="@+id/prp_lab3_progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:scaleType="fitCenter"
                        android:visibility="gone" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>